Fixed tab spacing

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -90,7 +90,7 @@ svg {
     float: left;
     border-bottom: 1px solid #ccc;
     width: 100%;
-    margin-bottom: 16px;
+    margin-bottom: 35px;
     list-style: none;
 }
 
